--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <h1>🎓 HỆ THỐNG QUẢN LÝ SINH VIÊN</h1>
+        <h1>Bài Kiểm tra-DH52200985</h1>
         <p class="subtitle">Kết nối MongoDB Atlas Real-time</p>
 
         <div class="form-card">
